--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.data.mongodb.database=inseminaplus_db
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://henricostarios:henri123@inseminacluster.38eslk5.mongodb.net/inseminaPlus
+spring.data.mongodb.database=inseminaPlus
 
 # App Properties
 inseminaplus.app.jwtCookieName= inseminaplus
