--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.data.mongodb.uri=mongodb+srv://henricostarios:henri123@inseminacluster.38eslk5.mongodb.net/inseminaPlus
 spring.data.mongodb.database=inseminaPlus
 
+spring.datasource.url= jdbc:mysql://localhost:3306/mysql?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= henri123
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto= update
+
 # App Properties
 inseminaplus.app.jwtCookieName= inseminaplus
 inseminaplus.app.jwtSecret= ======================inseminaplus=Spring===========================
